<resources>
    <string name="app_name">myKidneyNutrition</string>
    <string name="logo_text">Are you ready to take charge of your health? Ready. Set Go!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome1_title">SET YOUR GOALS FOR BETTER \nAND HEALTHY LIFE</string>
    <string name="terms_and_conditions">Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit.</string>
    <string name="error_empty_email">*Please enter email</string>
    <string name="error_empty_fullname">*Please enter full name</string>
    <string name="error_empty_password">*Please enter password</string>
    <string name="error_email">*Please re-enter email address</string>
    <string name="error_password">*Please re-enter Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="title_notifications">Notifications</string>
    <string name="weight_description">Always measure either before or after going to toilet in the morning. If your weight is 3kg or higher than usual, speak to your general practitioner to adjust diuretics.</string>
    <string name="nutrition_detail">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.

Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo.

Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</string>
    <string name="generic_error_field">*Please enter this field</string>
    <string name="non_empty_string">*Should be non-empty string</string>
    <string name="positive_number">*Should be a positive number</string>
    <string name="select_unit">*Select Units</string>
    <string name="feature_not_implemented">This feature is not yet implemented</string>
    <string name="drink_water">Know Your Fluid Intake</string>
    <string name="desc">Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat</string>
    <string name="eat_vegetables_amp_fruits"><![CDATA[EAT VEGETABLES & FRUITS]]></string>
    <string name="workout">WORKOUT</string>
    <string name="check_and_monitor_your_body">CHECK AND MONITOR YOUR BODY</string>
    <string name="welcome2_desc">Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum feugiat, velit mauris egestas quam, ut aliquam massa nisl quis neque. Suspendisse in orci enim.</string>
    <string name="consistent_medication">CONSISTENT MEDICATIONS</string>
    <string name="terms_of_service_and_nliability_release">TERMS OF SERVICE AND  LIABILITY RELEASE</string>
    <string name="validate_email">Please enter valid email address</string>
    <string name="welcome_string">Welcome </string>
    <string name="daily_weight_measurement_message">Always measure either before or after going to toilet in the morning.If your weight is 3kg or higher than usual, speak to your general practitioner to adjust diuretics</string>

    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="select_filter_date">Select Date</string>
    <string name="select_filter_type">Select Type</string>
    <string name="select_filter_date_string">Filter by date: %s</string>
    <string name="select_filter_type_string">Filter by type: %s</string>
    <string name="reset">Reset</string>
    <string name="meal_type_breakfast">Breakfast</string>
    <string name="meal_type_lunch">Lunch</string>
    <string name="meal_type_dinner">Dinner</string>
    <string name="meal_type_snacks">Snack</string>
    <string name="meal_type_casual">Casual</string>
    <string name="error_password_not_match">The password does not match</string>
    <string name="error_password_min">The password does not meet the minimum length (%d Characters)</string>
    <string name="dialog_title_add_meal_cancel_changes">Cancel Changes</string>
    <string name="dialog_message_add_meal_cancel_changes">Are you sure you want to cancel the changes?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
